ardupilot_ws/logs/my_APMrover/build.make.024.log.stderr
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/velocity_sending_node.cpp: In function ‘int main(int, char**)’:
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/velocity_sending_node.cpp:42:3: error: expected ‘)’ before ‘{’ token
   {
   ^
make[2]: *** [CMakeFiles/velocity_sending_node.dir/src/velocity_sending_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/velocity_sending_node.dir/all] Error 2
make: *** [all] Error 2
